[gd_scene load_steps=2 format=3 uid="uid://dbfeu2nwkni0i"]

[ext_resource type="Script" path="res://enemy/enemy.gd" id="1_egje8"]

[node name="Enemy" type="Node2D" groups=["enemy"]]
script = ExtResource("1_egje8")

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]

[node name="CollideDamageTimer" type="Timer" parent="."]
one_shot = true

[connection signal="area_entered" from="Area2D" to="." method="_on_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_exited"]
[connection signal="timeout" from="CollideDamageTimer" to="." method="collide_player"]
